[package]
name = "sqlparser"
description = "Extensible SQL Lexer and Parser with support for ANSI SQL:2011"
version = "0.2.4"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/andygrove/sqlparser-rs"
documentation = "https://docs.rs/sqlparser/"
keywords = [ "ansi", "sql", "lexer", "parser" ]
repository = "https://github.com/andygrove/sqlparser-rs"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name = "sqlparser"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", git = "https://github.com/mesalock-linux/log-sgx" }
chrono = {git="https://github.com/mesalock-linux/chrono-sgx"}
uuid = {git = "https://github.com/mesalock-linux/uuid-sgx"}
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git",optional=true}

[dev-dependencies]
simple_logger = "1.0.1"
#matches = "0.1"

[features]
default=["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]