[package]
name = "sqlparser"
description = "Extensible SQL Lexer and Parser with support for ANSI SQL:2011"
version = "0.4.1-alpha.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/andygrove/sqlparser-rs"
documentation = "https://docs.rs/sqlparser/"
keywords = [ "ansi", "sql", "lexer", "parser" ]
repository = "https://github.com/andygrove/sqlparser-rs"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[lib]
name = "sqlparser"
path = "src/lib.rs"

[dependencies]
#bigdecimal = { version = "0.1.0", optional = true }
log = { version = "0.4", default-features = false, git = "https://github.com/mesalock-linux/log-sgx" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git",optional=true}
[dev-dependencies]
simple_logger = "1.0.1"
matches = "0.1"

[features]
default=["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]