[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sqlparser = { path = "../../../" }
matches = "0.1"
sgx_types = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git"}
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git"}
sgx_tunittest = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git"}
